--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <a class="navbar-brand" href="#"><img src="C:\users\prakash\downloads\icons8-bot-50.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <i class="fa fa-home" aria-hidden="true"></i> <span class="sr-only">(current)</span></a>
@@ -39,19 +36,94 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li> -->
-      <li class="nav-item navbar-right">
-        <a class="nav-link" href="login">Login <i class="fa fa-user" aria-hidden="true"></i></a>
-      </li>
-      <li class="nav-item navbar-right">
-        <a class="nav-link" href="signup">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
-      </li>
     </ul>
-  </div>
+    <ul class="navbar-nav ml-auto">
+
+        <li class="nav-item" data-toggle="modal" data-target="#login">
+          <a class="nav-link" href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+        </li>
+        <li class="nav-item" data-toggle="modal" data-target"#signup">
+          <a class="nav-link" href="#">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+        </li>
+
+    </ul>
+
 </nav>
 <div class="content">
   <h1>Socialize</h1>
-    
+    <!-- <hr width="200px">
+  <h3><em>Its about the way you communicate</em></h3>
+  <hr width="400px"> -->
 
 </div>
+
+
+<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Signup</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <form>
+<div class="form-group">
+  <label for="exampleInputEmail1">Email address</label>
+  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+</div>
+<div class="form-group">
+  <label for="formGroupExampleInput2">Username</label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Username">
+</div>
+<div class="form-group">
+  <label for="exampleInputPassword1">Password</label>
+  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+</div>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
