--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       </div>
     </div>
   </div>
+    </div>
 
 <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -123,6 +124,7 @@
       </div>
     </div>
   </div>
+    </div>
 
 
   
