--- a/chat/index.html
+++ b/chat/index.html
@@ -17,15 +17,15 @@
     <link rel="shortcut icon" href="icons8-bot-50.png">
 </head>
 <body>
-  <h1>Socket.IO Example</h1>
-  <div id="login-div">
-      <input placeholder="username" type="text" id="loginbox">
-      <button id="loginbtn">LOGIN</button>
-  </div>
-  <div id="chat-div" style="display: none">
-      <input placeholder="new message" type="text" id="msgbox">
-      <button id="sendmsg">SEND</button>
-      <ul id="msglist"></ul>
-  </div>
+    <!-- <h1>Socket.IO Example</h1>
+    <div id="login-div">
+        <input placeholder="username" type="text" id="loginbox">
+        <button id="loginbtn">LOGIN</button>
+    </div>
+    <div id="chat-div" style="display: none">
+        <input placeholder="new message" type="text" id="msgbox">
+        <button id="sendmsg">SEND</button>
+        <ul id="msglist"></ul>
+    </div> -->
 </body>
 </html>
