--- a/intro/index.html
+++ b/intro/index.html
@@ -15,6 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
     crossorigin="anonymous"></script>
   <script src="route.js"></script>
+  <!-- <script src="index.js"></script> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="shortcut icon" href="icons8-bot-50.png">
@@ -57,12 +58,12 @@
     <ul class="navbar-nav ml-auto">
 
       <li class="nav-item" data-toggle="modal" data-target="#login">
-        <a class="nav-link" href="#">Login
+        <a class="nav-link" href="">Login
           <i class="fa fa-user" aria-hidden="true"></i>
         </a>
       </li>
       <li class="nav-item" data-toggle="modal" data-target="#signup">
-        <a class="nav-link" href="#">Signup
+        <a class="nav-link" href="">Signup
           <i class="fa fa-user-plus" aria-hidden="true"></i>
         </a>
       </li>
@@ -90,21 +91,21 @@
           <form method="post" action="/signup">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="formGroupExampleInput2">Username</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Username">
+              <input type="text" name="username" class="form-control" id="formGroupExampleInput2" placeholder="Username">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-success" data-dismiss="modal">Save</button>
+          <button type="submit" id="btn1" class="btn btn-success" data-dismiss="modal">Save</button>
         </div>
         </form>
       </div>
@@ -125,16 +126,16 @@
           <form method="post" action="/login">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <input type="checkbox" name="remember" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Remember Me</label>
             </div>
             <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
 
