--- a/intro/index.html
+++ b/intro/index.html
@@ -90,17 +90,17 @@
         <div class="modal-body">
           <form method="post" action="/signup">
             <div class="form-group">
-              <label for="Email">Email address</label>
-              <input type="email" name="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email">
+              <label for="Email signup">Email address</label>
+              <input type="email" name="email" class="form-control" id="Email signup" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
-              <label for="formGroupExampleInput2">Username</label>
-              <input type="text" name="username" class="form-control" id="formGroupExampleInput2" placeholder="Username">
+              <label for="username signup">Username</label>
+              <input type="text" name="username" class="form-control" id="username signup" placeholder="Username">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="Password signup">Password</label>
+              <input type="password" name="password" class="form-control" id="Password signup" placeholder="Password">
             </div>
         </div>
         <div class="modal-footer">
@@ -117,7 +117,7 @@
 
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+          <h5 class="modal-title" id="login modal">Login</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -125,16 +125,16 @@
         <div class="modal-body">
           <form method="post" action="/login">
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <label for="Email login">Email address</label>
+              <input type="email" name="email" class="form-control" id="Email login" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="Password login">Password</label>
+              <input type="password" name="password" class="form-control" id="Password login" placeholder="Password">
             </div>
             <div class="form-check">
-              <input type="checkbox" name="remember" class="form-check-input" id="exampleCheck1">
+              <input type="checkbox" name="remember" class="form-check-input" id="remember">
               <label class="form-check-label" for="exampleCheck1">Remember Me</label>
             </div>
             <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
