--- a/intro/index.html
+++ b/intro/index.html
@@ -37,6 +37,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">About
           <i class="fa fa-book" aria-hidden="true"></i>
+          
         </a>
       </li>
       <li class="nav-item">
@@ -58,12 +59,12 @@
     <ul class="navbar-nav ml-auto">
 
       <li class="nav-item" data-toggle="modal" data-target="#login">
-        <a class="nav-link" href="">Login
+        <a class="nav-link" href="#">Login
           <i class="fa fa-user" aria-hidden="true"></i>
         </a>
       </li>
       <li class="nav-item" data-toggle="modal" data-target="#signup">
-        <a class="nav-link" href="">Signup
+        <a class="nav-link" href="#">Signup
           <i class="fa fa-user-plus" aria-hidden="true"></i>
         </a>
       </li>
