--- a/intro/index.html
+++ b/intro/index.html
@@ -88,8 +88,8 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form method="post" action="/signup">
+        <form method="POST" action="/signup">
+          <div class="modal-body">
             <div class="form-group">
               <label for="Email signup">Email address</label>
               <input type="email" name="email" class="form-control" id="Email signup" aria-describedby="emailHelp" placeholder="Enter email">
@@ -103,11 +103,11 @@
               <label for="Password signup">Password</label>
               <input type="password" name="password" class="form-control" id="Password signup" placeholder="Password">
             </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" id="btn1" class="btn btn-success" data-dismiss="modal">Save</button>
-        </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" id="btn1" class="btn btn-success" data-dismiss="modal">Save</button>
+          </div>
         </form>
       </div>
     </div>
@@ -123,8 +123,8 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form method="post" action="/login">
+        <form method="POST" action="/login">
+          <div class="modal-body">
             <div class="form-group">
               <label for="Email login">Email address</label>
               <input type="email" name="email" class="form-control" id="Email login" aria-describedby="emailHelp" placeholder="Enter email">
@@ -140,11 +140,11 @@
             </div>
             <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
 
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-success" data-dismiss="modal">Submit</button>
-        </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-success" data-dismiss="modal">Submit</button>
+          </div>
         </form>
       </div>
     </div>
