--- a/intro/index.html
+++ b/intro/index.html
@@ -88,7 +88,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form method="POST" action="/signup">
+        <form method="POST" action="/intro/route.js">
           <div class="modal-body">
             <div class="form-group">
               <label for="Email signup">Email address</label>
@@ -106,7 +106,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" id="btn1" class="btn btn-success" data-dismiss="modal">Save</button>
+            <button type="submit" id="btn1" class="btn btn-success">Save</button>
           </div>
         </form>
       </div>
@@ -143,7 +143,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-success" data-dismiss="modal">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
           </div>
         </form>
       </div>
