--- a/intro/index.html
+++ b/intro/index.html
@@ -14,8 +14,6 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
     crossorigin="anonymous"></script>
-  <script src="route.js"></script>
-  <!-- <script src="index.js"></script> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="shortcut icon" href="icons8-bot-50.png">
@@ -88,7 +86,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form method="POST" action="/intro/route.js">
+        <form method="POST" action="/signup">
           <div class="modal-body">
             <div class="form-group">
               <label for="Email signup">Email address</label>
@@ -150,7 +148,7 @@
     </div>
   </div>
 
-
+  <script src="route.js"></script>
 </body>
 
 </html>
