--- a/intro/index.html
+++ b/intro/index.html
@@ -125,9 +125,9 @@
         <form method="POST" action="/login">
           <div class="modal-body">
             <div class="form-group">
-              <label for="Email login">Email address</label>
-              <input type="email" name="email" class="form-control" id="Email login" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label for="Email login">username</label>
+              <input type="text" name="email" class="form-control" id="Email login" aria-describedby="emailHelp" placeholder="Enter usename">
+             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
             <div class="form-group">
               <label for="Password login">Password</label>
