--- a/chat/index.html
+++ b/chat/index.html
@@ -18,11 +18,11 @@
 </head>
 <body>
     <h1>Socket.IO Example</h1>
-    <div id="login-div">
+    <!-- <div id="login-div">
         <input placeholder="username" type="text" id="loginbox">
         <button id="loginbtn">LOGIN</button>
-    </div>
-    <div id="chat-div" style="display: none">
+    </div> -->
+    <div id="chat-div">
         <input placeholder="new message" type="text" id="msgbox">
         <button id="sendmsg">SEND</button>
         <ul id="msglist"></ul>
