--- a/chat/index.html
+++ b/chat/index.html
@@ -12,16 +12,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>
   <link rel="stylesheet" href="style.css">    
-  
-   <script src="main.js"></script>
-    <link rel="shortcut icon" href="icons8-bot-50.png">
+  <script src="main.js"></script>
+  <link rel="shortcut icon" href="icons8-bot-50.png">
 </head>
 <body>
-    <h1>Socket.IO Example</h1>
-    <!-- <div id="login-div">
-        <input placeholder="username" type="text" id="loginbox">
-        <button id="loginbtn">LOGIN</button>
-    </div> -->
+    <h1>your personal chatbox</h1>
+    
     <div id="chat-div">
         <input placeholder="new message" type="text" id="msgbox">
         <button id="sendmsg">SEND</button>
