--- a/intro/index.html
+++ b/intro/index.html
@@ -34,26 +34,16 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#about">About
           <i class="fa fa-book" aria-hidden="true"></i>
           
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#contact">Contact
           <i class="fa fa-phone" aria-hidden="true"></i>
         </a>
       </li>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
     </ul>
     <ul class="navbar-nav ml-auto">
 
@@ -73,10 +63,6 @@
   </nav>
   <div class="content">
     <h1>Socialize</h1>
-    <!-- <hr width="200px">
-  <h3><em>Its about the way you communicate</em></h3>
-  <hr width="400px"> -->
-
   </div>
   <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -125,20 +111,13 @@
         <form method="POST" action="/login">
           <div class="modal-body">
             <div class="form-group">
-              <label for="Email login">username</label>
-              <input type="text" name="email" class="form-control" id="Email login" aria-describedby="emailHelp" placeholder="Enter usename">
-             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+              <label for="Username login">Username</label>
+              <input type="text" name="username" class="form-control" id="Username login" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="Password login">Password</label>
               <input type="password" name="password" class="form-control" id="Password login" placeholder="Password">
             </div>
-            <div class="form-check">
-              <input type="checkbox" name="remember" class="form-check-input" id="remember">
-              <label class="form-check-label" for="exampleCheck1">Remember Me</label>
-            </div>
-            <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
-
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -148,7 +127,20 @@
       </div>
     </div>
   </div>
-
+  <div class="modal fade" id="about">
+    <div class="modal-dialog">
+      <div class="modal-content">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique quibusdam iure architecto aliquam molestias doloribus, officia totam at magnam hic eos ratione iusto facere iste delectus neque! Eius, unde? Pariatur!
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="contact">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique quibusdam iure architecto aliquam molestias doloribus, officia totam at magnam hic eos ratione iusto facere iste delectus neque! Eius, unde? Pariatur!
+        </div>
+      </div>
+    </div>
   <script src="../app/routes.js"></script>
 </body>
 
