--- a/chat/index.html
+++ b/chat/index.html
@@ -6,17 +6,35 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Socialize</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  <script
+			  src="https://code.jquery.com/jquery-3.3.1.js"
+			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+			  crossorigin="anonymous"></script>
   
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>
   <link rel="stylesheet" href="style.css">    
   <script src="main.js"></script>
+  <script src="../app/routes.js"></script>
   <link rel="shortcut icon" href="icons8-bot-50.png">
 </head>
 <body>
-    <h1>your personal chatbox</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <a class="navbar-brand" href="#">
+          <img src="icons8-bot-50.png">
+          <h1>your personal space</h1>
+        </a>
+        <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item" >
+              <a class="nav-link" href="/logout">Logout
+                <i class="fa fa-user" aria-hidden="true"></i>
+              </a>
+            </li>                  
+        </ul>
+      
+    </nav>
     
     <div id="chat-div">
         <input placeholder="new message" type="text" id="msgbox">
