--- a/intro/index.html
+++ b/intro/index.html
@@ -115,11 +115,11 @@
           <div class="modal-body">
             <div class="form-group">
               <label for="Username login">Username</label>
-              <input type="text" name="username" class="form-control" id="Username login" placeholder="Enter username">
+              <input type="text" name="username" class="form-control" id="Userlogin" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="Password login">Password</label>
-              <input type="password" name="password" class="form-control" id="Password login" placeholder="Password">
+              <input type="password" name="password" class="form-control" id="Passlogin" placeholder="Password">
             </div>
           </div>
           <div class="modal-footer">
