--- a/intro/index.html
+++ b/intro/index.html
@@ -111,7 +111,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form method = "POST" action="/login" >
+        <form>
           <div class="modal-body">
             <div class="form-group">
               <label for="Username login">Username</label>
